--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     ----------------------------------------------------------->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     
 </head>
 <body>
@@ -17,7 +18,6 @@
    <div class="container">
        <header>
             <nav class="navbar navbar-default">
-                <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
@@ -26,8 +26,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
+                    
                     <a class="navbar-brand" href="#">
-                        <img alt="Rokomari" src="...">
+                        <img class="img-responsive" alt="Rokomari" src="">
                     </a>
                 </div>
 
@@ -44,7 +45,6 @@
                         <li><a href="#">Contacts</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
             </nav>
        </header>
    </div>
