--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </button>
                     
                     <a class="navbar-brand" href="#">
-                        <img class="img-responsive" alt="Rokomari" src="">
+                        <img class="img-responsive" alt="Rokomari" src="assets/images/Logo.png">
                     </a>
                 </div>
 
