make footer menu responsive

--- a/index.html
+++ b/index.html
@@ -244,9 +244,11 @@
        ------------------------------------------------------------->
        <footer>
            <div class="row">
-                <div class="col-xs-12 col-sm-7 col-md-7">
+                <div class="col-xs-12 col-sm-8 col-md-7">
                     <div class="footer-nav">
-
+                        <div id="footer-menu">
+                            <a href=""><i class="glyphicon glyphicon-menu-hamburger"></i></a>
+                        </div>
                         <ul>
                             <li><a href="#">home</a></li>
                             <li><a href="#">about</a></li>
@@ -260,7 +262,7 @@
                    </div>
                 </div>
                 
-                <div class="col-xs-12 col-sm-5 col-md-5">
+                <div class="col-xs-12 col-sm-4 col-md-5">
                     <div class="copyright pull-right">
                         <p>&copy 2012-2017 Rokomari.com</p>
                         <p>Privacy Policy</p>
