refactor jquery, add minified version

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-------------------------CSS File-------------------------
     ----------------------------------------------------------->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/app.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/app.min.css">
+    <link rel="stylesheet" href="assets/css/responsive.min.css">
     
     <!-------------------------Fonts-------------------------
     ----------------------------------------------------------->
@@ -317,7 +317,7 @@
     <!--CSS3 Pseudo Class support For Older Browser-->
     <script src="https://cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
     <script src="assets/js/modernizr-custom.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/app.min.js"></script>
     
 </body>
 </html>
